examples/invalid/syntaxErr/basic/skpErr.wacc
# skip typo
# Output:
# #syntax error#

#Program:#

begin skp end
